fix sponsor image overflow #2

--- a/windberg_web/static/css/windberg.css
+++ b/windberg_web/static/css/windberg.css
@@ -107,5 +107,5 @@ div.container.content {
 }
 
 div.sponsors img {
-    max-width: 100%;
+    max-width: 97%;
 }
